--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 </div>
 <div class="music-player">
   <p class="song-title">A small gift from me 🎁</p>
-  <audio id="audio-player" src="TumMile.mp4"></audio>
+  <audio autoplay="" loop="" controls="">
+    <source src="https://heyyouu.netlify.app/song.mp3" type="audio/mp3">
+  </audio>
   <div class="controls">
     <button id="play-pause">▶️</button>
     <input type="range" id="seek-bar" value="0">
