--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
 </div>
 <div class="music-player">
   <p class="song-title">A small gift from me 🎁</p>
+ <div style="display: none;">
   <audio autoplay="" loop="" controls="">
     <source src="https://heyyouu.netlify.app/song.mp3" type="audio/mp3">
   </audio>
+ </div>
   <div class="controls">
     <button id="play-pause">▶️</button>
     <input type="range" id="seek-bar" value="0">
