--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <div class="paper">
 <p class="p1">You are Cute </p>
-  <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+  <p class="p1">& Amazing <span style="color: red !important;">❤️</span></p>
 </div>
 <div class="paper">
 <p class="p1">Drag the papers to move!</p>
