--- a/index.html
+++ b/index.html
@@ -34,12 +34,16 @@
   <p class="p1">& Amazing <span style="color: red !important;">❤️</span></p>
 </div>
 <div class="paper">
+  <p class="p1">Play the song below👇🏻 </p>
+  <p class="p1">and Drag!</p>
+</div>
+<div class="paper">
 <p class="p1">Drag the papers to move!</p>
 </div>
 <!-- Mini Music Player -->
     <div class="music-player">
         <p class="song-title">🎁 A small gift from me</p>
-        <audio id="audio-player" autoplay loop>
+        <audio id="audio-player" loop>
             <source src="https://heyyouu.netlify.app/song.mp3" type="audio/mp3">
         </audio>
         <div class="controls">
